--- a/recipes/mne-python_1.0/construct.yaml
+++ b/recipes/mne-python_1.0/construct.yaml
@@ -10,9 +10,9 @@ welcome_image: ../../assets/welcome_macOS.png  # [osx]
 welcome_image: ../../assets/welcome.png        # [not osx]
 header_image: ../../assets/header.png
 icon_image: ../../assets/icon.png
-welcome_file: ../../assets/welcome.rtf
-readme_text: ""
-conclusion_file: ../../assets/conclusion.rtf
+#welcome_file: ../../assets/welcome.rtf
+#readme_text: ""
+#conclusion_file: ../../assets/conclusion.rtf
 
 initialize_by_default: False
 register_python_default: False
@@ -37,7 +37,7 @@ post_install: ../../assets/post_install_windows.bat     # [win]
 installer_type: pkg                     # [osx]
 signing_identity_name:                  # [osx]  Used for productsign
 notarization_identity_name:             # [osx]  Used for codesign
-reverse_domain_identifier: tools.mne    # [osx]  Used for productbuild --identifier $reverse_domain_identifier.$name
+#reverse_domain_identifier: tools.mne    # [osx]  Used for productbuild --identifier $reverse_domain_identifier.$name
 
 # Only create menus for mne-installer-menus
 menu_packages:
@@ -59,7 +59,7 @@ specs:
   # TODO: ⛔️ ⛔️ ⛔️ REMOVE ASAP STOP ⛔️ ⛔️ ⛔️
 
   - mne =1.0.3=*_0
-  - mne-installer-menus =1.0.3=*_0
+  - mne-installer-menus =1.0.3=*_0  # [not arm64]
   - mne-qt-browser ~=0.3.0
   - mne-bids ~=0.10.0
   - mne-connectivity ~=0.3.0
@@ -70,8 +70,8 @@ specs:
   - mne-rsa ~=0.6.0
   - mne-microstates ~=0.3.0
   - mne-ari ~=0.1.0
-  - mne-kit-gui ~=1.0.1
-  - mne-icalabel ~=0.1.0  # [not win]
+  - mne-kit-gui ~=1.0.1  # [not arm64]
+  - mne-icalabel ~=0.1.0
   - autoreject ~=0.3.1
   - pyprep ~=0.4.0
   # Python
@@ -95,7 +95,7 @@ specs:
   - pingouin
   - pycircstat
   # MRI
-  - fsleyes
+  - fsleyes  # [not arm64]
   - dcm2niix  # [not arm64]
   # Time-frequency analysis
   - pactools
