--- a/recipes/mne-python_1.0/construct.yaml
+++ b/recipes/mne-python_1.0/construct.yaml
@@ -10,9 +10,9 @@ welcome_image: ../../assets/welcome_macOS.png  # [osx]
 welcome_image: ../../assets/welcome.png        # [not osx]
 header_image: ../../assets/header.png
 icon_image: ../../assets/icon.png
-#welcome_file: ../../assets/welcome.rtf
-#readme_text: ""
-#conclusion_file: ../../assets/conclusion.rtf
+welcome_file: ../../assets/welcome.rtf
+readme_text: ""
+conclusion_file: ../../assets/conclusion.rtf
 
 initialize_by_default: False
 register_python_default: False
@@ -37,7 +37,7 @@ post_install: ../../assets/post_install_windows.bat     # [win]
 installer_type: pkg                     # [osx]
 signing_identity_name:                  # [osx]  Used for productsign
 notarization_identity_name:             # [osx]  Used for codesign
-#reverse_domain_identifier: tools.mne    # [osx]  Used for productbuild --identifier $reverse_domain_identifier.$name
+reverse_domain_identifier: tools.mne    # [osx]  Used for productbuild --identifier $reverse_domain_identifier.$name
 
 # Only create menus for mne-installer-menus
 menu_packages:
