Include dcm2niix on arm64

--- a/recipes/mne-python_1.0/construct.yaml
+++ b/recipes/mne-python_1.0/construct.yaml
@@ -97,7 +97,7 @@ specs:
   - pycircstat
   # MRI
   - fsleyes  # [not arm64]
-  - dcm2niix  # [not arm64]
+  - dcm2niix
   # Time-frequency analysis
   - pactools
   - tensorpac
