--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,8 +21,8 @@ jobs:
         os: [ubuntu-18.04, ubuntu-20.04, macos-10.15, macos-11, windows-2019, windows-2022]
         arch: [native]
         include:
-          - os: [macos-11]
-            arch: [arm64]
+          - os: macos-11
+            arch: arm64
 
     runs-on: ${{ matrix.os }}
 
