--- a/recipes/mne-python_1.0/construct.yaml
+++ b/recipes/mne-python_1.0/construct.yaml
@@ -25,7 +25,8 @@ default_prefix_all_users: "%ALLUSERSPROFILE%\\mne-python\\1.0.3_0"  # [win]
 
 uninstall_name: MNE-Python ${VERSION} (Python ${PYVERSION})
 
-installer_filename: MNE-Python-1.0.3_0-macOS_Intel.pkg  # [osx]
+installer_filename: MNE-Python-1.0.3_0-macOS_Intel.pkg  # [osx and not arm64]
+installer_filename: MNE-Python-1.0.3_0-macOS_M1.pkg    # [osx and arm64]
 installer_filename: MNE-Python-1.0.3_0-Windows.exe      # [win]
 installer_filename: MNE-Python-1.0.3_0-Linux.sh         # [linux]
 
@@ -55,11 +56,10 @@ specs:
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
 
   # TODO: ⛔️ ⛔️ ⛔️ REMOVE ASAP START ⛔️ ⛔️ ⛔️
-  - jinja2 <3.1,>=2.10  # Remove once https://github.com/conda-forge/numpydoc-feedstock/pull/17 has been merged
   # TODO: ⛔️ ⛔️ ⛔️ REMOVE ASAP STOP ⛔️ ⛔️ ⛔️
 
-  - mne =1.0.3=*_0
-  - mne-installer-menus =1.0.3=*_0
+  - mne =1.0.3=*_1
+  - mne-installer-menus =1.0.3=*_1
   - mne-qt-browser ~=0.3.0
   - mne-bids ~=0.10.0
   - mne-connectivity ~=0.3.0
