Install xcb libraries on Linux CI systems

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -291,6 +291,7 @@ jobs:
       - name: Check installation (Linux)
         if: ${{ runner.os == 'Linux' }}
         run: |
+          sudo apt-get install -y libxcb-util1 libxcb-keysyms1 libxcb-image0 libxcb-render-util0  # (temporary?) resolution for https://github.com/conda-forge/qt-main-feedstock/issues/32
           sudo apt-get install -y xvfb
           /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1280x1024x24 -ac +extension GLX +render -noreset -nolisten tcp -nolisten unix
           export DISPLAY=":99"
